--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=projectmanager
 spring.thymeleaf.cache=false
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/projectmanager?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/projectmanager?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=usuProjectManager
 spring.datasource.password=qw4er253q6w7e98r
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
