--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,17 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 
+# Database Configuration for MySQL (Uncomment if using MySQL)
+# spring.datasource.url=jdbc:mysql://localhost:3306/projectmanager?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# spring.datasource.username=usuProjectManager
+# spring.datasource.password=qw4er253q6w7e98r
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # JPA/Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # Server Configuration
 server.port=8020
